--- a/css/style.css
+++ b/css/style.css
@@ -8,31 +8,32 @@ html, body {
 
 .container {
   height: 100%;
+  width: 100%;
 }
 
 .row {
   width: 100%;
-}
-
-.nav {
-  width: 300px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 #map {
-  height: 100%;
-  left: 150px;
+  height: calc(100% - 80px);
+  width: calc(100% - 300px);
+  left: 300px;
+  position: absolute;
   background-color: #e3e7d6;
 }
 
 .sidenav {
-  height: 100%;
+  height: calc(100% - 80px);
   width: 300px;
   position: fixed;
   z-index: 1;
   left: 0;
   background-color: #567682;
   transition: 0.5s;
-  padding: 40px 0px 0px 20px;
+  padding: 40px 0px 0px 0px;
 }
 
 .sidenav a {
@@ -41,7 +42,7 @@ html, body {
   color: #6EB9D4;
   display: block;
   transition: 0.3s;
-  padding: 10px;
+  padding: 10px 30px;
 }
 
 .sidenav .closebtn {
@@ -54,10 +55,57 @@ html, body {
   color: #e5e9da;
 }
 
-.title {
-  color: #e5e9da;
+.hero {
 }
 
+.title {
+  color: #e5e9da;
+  padding: 0px 20px;
+}
+
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, 0, .col-11, 1, .col-12, {
+  position: relative;
+  min-height: 1px;
+}
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
+  float: left;
+}
+.col-12 {
+  width: 100%;
+}
+.col-11 {
+  width: 91.66666667%;
+}
+.col-10 {
+  width: 83.33333333%;
+}
+.col-9 {
+  width: 75%;
+}
+.col-8 {
+  width: 66.66666667%;
+}
+.col-7 {
+  width: 58.33333333%;
+}
+.col-6 {
+  width: 50%;
+}
+.col-5 {
+  width: 41.66666667%;
+}
+.col-4 {
+  width: 33.33333333%;
+}
+.col-3 {
+  width: 25%;
+}
+.col-2 {
+  width: 16.66666667%;
+}
+.col-1 {
+  width: 8.33333333%;
+}
 
 
 /*
