--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,19 @@ html, body {
   padding: 0px 20px;
 }
 
+#pano {
+  width: 200px;
+  height: 200px;
+}
+
+.infowindow-image {
+  max-width: 200px !important;
+}
+
+.infowindow-text {
+  max-width: 200px !important;
+}
+
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, 0, .col-11, 1, .col-12, {
   position: relative;
   min-height: 1px;
