--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,9 @@ html, body {
 
 .infowindow-text {
   max-width: 200px !important;
+  font-weight: 300;
+  font-size: 13px;
+  overflow: hidden;
 }
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, 0, .col-11, 1, .col-12, {
