--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,17 @@ li.hover {
 }
 
 .infowindow-image {
-  max-width: 200px !important;
+  max-width: 250px !important;
+  max-height: 250px;
+  overflow: hidden;
+  border-radius: 2px;
+  -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+  border: 2px solid #b6b6b6;
+  /* border-color: rgba(0, 0, 0, 0.2); */
+  border-color: #ebfd1b;
+  padding: 5px auto;
 }
 
 .infowindow-text {
