--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ html, body {
   background-color: #25424d;
 }
 
+h2 {
+  font-weight: normal;
+}
+
 .container {
   height: 100%;
   width: 100%;
@@ -118,6 +122,7 @@ li.hover {
 }
 
 .gif-image {
+  cursor: pointer;
   max-width: 250px !important;
   max-height: 250px;
   overflow: hidden;
@@ -132,11 +137,12 @@ li.hover {
 }
 
 .infowindow-text {
+  color: #567682;
+  font-weight: normal;
   padding: 7px;
   max-width: 280px !important;
   font-size: 15px;
   overflow: hidden;
-  color: #25424d;
 }
 
 .license-text {
