--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,16 @@ li.hover {
 }
 
 .gif-image {
-  cursor: pointer;
+  max-width: 250px !important;
+  max-height: 250px;
+  overflow: hidden;
+  -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+  padding: 5px auto;
+}
+
+.gif-image {
   max-width: 250px !important;
   max-height: 250px;
   overflow: hidden;
