--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@ h2 {
 #corner-infowindow {
   position: absolute;
   width: 300px;
-  height: 400px;
   z-index: 1;
   left: 330px;
   top: 110px;
@@ -132,6 +131,10 @@ li.hover {
   -moz-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
   padding: 5px auto;
+}
+
+a {
+  text-decoration: none;
 }
 
 .gif-image {
