feat: Style weather forecast

--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,16 @@ a {
   color: #e5e9da;
 }
 
+#weather h2 {
+  margin: 0;
+  padding: 5px 0 0 0;
+}
+
+#weather p {
+  margin: 0;
+  font-size: 0.9em;
+}
+
 .weather-slots {
   display: flex;
   flex-wrap: wrap;
