--- a/css/style.css
+++ b/css/style.css
@@ -111,10 +111,46 @@ li.hover {
 }
 
 .title {
-  color: #e5e9da;
   padding: 0px 20px;
+  color: #a7e4fb;
 }
 
+.title button{
+  padding: 0px 10px;
+  margin: 0 5px;
+  background-color: #a7e4fb;
+  color: #25424d;
+  font-size: 1em;
+  font-weight: bold;
+  border: 2px solid #567682;
+  border-radius: 10px;
+}
+
+.title button:hover {
+  box-shadow: 0 12px 16px 0 rgba(167,228,251,0.24), 0 17px 50px 0 rgba(167,228,251,0.19);
+}
+
+.title .active  {
+  background-color: #a7e4fb;
+  color: #25424d;
+}
+
+.title .not-active  {
+  background-color: #25424d;
+  color: #a7e4fb;
+}
+
+button:focus {outline:0;}
+
+  /*
+dark: #25424d
+white: #e5e9da
+
+sidenav:
+dark: #567682
+white: #a7e4fb
+*/ 
+          
 #pano {
   width: 300px;
   height: 200px;
