--- a/css/style.css
+++ b/css/style.css
@@ -3,34 +3,22 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #25424d;
 }
 
-h2 {
+
+h1, h2, h3 {
   font-weight: normal;
 }
 
-.container {
+#map {
   height: 100%;
   width: 100%;
-}
-
-
-.row {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-#map {
-  height: calc(100% - 80px);
-  width: calc(100% - 300px);
-  left: 300px;
   position: absolute;
   background-color: #e3e7d6;
 }
 
 #corner-infowindow {
+  transition: 0.5s;
   position: absolute;
   width: 300px;
   z-index: 1;
@@ -62,8 +50,10 @@ h2 {
 
 #sidenav {
   width: 300px;
+  overflow-y: scroll;
+  height: 100%;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   left: 0;
   background-color: #567682;
   transition: 0.5s;
@@ -110,32 +100,35 @@ li.hover {
   color: #eef3e2;
 }
 
-.title {
-  padding: 0px 20px;
-  color: #a7e4fb;
+button {
+  vertical-align: middle;
 }
 
-.title button{
+.title {
+  padding: 0px 20px;
+  color: #25424d;
+}
+
+.toggle-button button{
   padding: 0px 10px;
   margin: 0 5px;
   background-color: #a7e4fb;
   color: #25424d;
   font-size: 1em;
-  font-weight: bold;
   border: 2px solid #567682;
-  border-radius: 10px;
+  border-radius: 7px;
 }
 
-.title button:hover {
+.toggle-button button:hover {
   box-shadow: 0 12px 16px 0 rgba(167,228,251,0.24), 0 17px 50px 0 rgba(167,228,251,0.19);
 }
 
-.title .active  {
+.toggle-button .active  {
   background-color: #a7e4fb;
   color: #25424d;
 }
 
-.title .not-active  {
+.toggle-button .not-active  {
   background-color: #25424d;
   color: #a7e4fb;
 }
@@ -181,24 +174,41 @@ a {
   #corner-infowindow {
     top: 110px;
   }
-  #sidenav {
-    height: calc(100% - 100px);
-    top: 80px;
-  }
 }
 
 @media screen and (min-width: 1001px) {
   #corner-infowindow {
     top: 181px;
   }
-  #sidenav {
-    height: calc(100% - 171px);
-    top: 151px;
+}
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 0px) and (max-width: 991px) {
+  #top-nav {
+    display: none;
   }
 }
 
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  #top-nav {
+    display: block;
+  }
+}
+
+#hamburger {
+  color: #567682;
+  text-shadow: 1px 1px 3px #a7e4fb;
+  font-size: 40px;
+  cursor: pointer;
+  padding: 10px;
+  position: absolute;
+  z-index: 1;
+  left: 10px;
+}
+
 #weather {
-  color: #e5e9da;
+  color: #25424d;
 }
 
 #weather h2 {
@@ -245,61 +255,16 @@ a {
 }
 
 .license-text {
-  z-index: 2;
-  font-size: 15px;
-  color: #6eb9d4;
-  background-color: #25424d;
+  color: #25424d;
+  background-color: #e3e7d6;
+  position: absolute;
+  bottom: 0px;
 }
 
 .license-text a {
-  color: #6eb9d4;
+  color: #25424d;
   text-decoration: none;
 }
-
-.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, 0, .col-11, 1, .col-12, {
-  position: relative;
-  min-height: 1px;
-}
-.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
-  float: left;
-}
-.col-12 {
-  width: 100%;
-}
-.col-11 {
-  width: 91.66666667%;
-}
-.col-10 {
-  width: 83.33333333%;
-}
-.col-9 {
-  width: 75%;
-}
-.col-8 {
-  width: 66.66666667%;
-}
-.col-7 {
-  width: 58.33333333%;
-}
-.col-6 {
-  width: 50%;
-}
-.col-5 {
-  width: 41.66666667%;
-}
-.col-4 {
-  width: 33.33333333%;
-}
-.col-3 {
-  width: 25%;
-}
-.col-2 {
-  width: 16.66666667%;
-}
-.col-1 {
-  width: 8.33333333%;
-}
-
 
 /*
 Colour palette used for the theme
