--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 html, body {
   font-family: arial, sans-serif;
-  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -10,10 +9,15 @@ h1, h2, h3 {
   font-weight: normal;
 }
 
+p {
+  margin: 2px;
+}
+
 #map {
   height: 100%;
   width: 100%;
   position: absolute;
+  left: 0;
   background-color: #e3e7d6;
 }
 
@@ -23,6 +27,7 @@ h1, h2, h3 {
   width: 300px;
   z-index: 1;
   left: 330px;
+  top: 30px;
   background-color: white;
   visibility: hidden;
   border-radius: 2px;
@@ -37,15 +42,34 @@ h1, h2, h3 {
 
 #close-thick:after {
   z-index: 2;
-  color: #ebfd1b;
+  color: #eee;
+  text-shadow: 2px 2px 3px #000;
   font: 40px/100% arial, sans-serif;
   position: absolute;
   right: 7px;
   text-decoration: none;
-  text-shadow: 0 1px 0 #fff;
   top: 3px;
   content: '×';
   cursor: pointer;
+}
+
+#quote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+#quote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+#quote p {
+  display: inline;
 }
 
 #sidenav {
@@ -169,24 +193,12 @@ a {
   text-decoration: none;
 }
 
-@media screen and (min-width: 0px) and (max-width: 1000px) {
-  #weather { display: none; }  /* hide it on small screens */
-  #corner-infowindow {
-    top: 110px;
-  }
-}
-
-@media screen and (min-width: 1001px) {
-  #corner-infowindow {
-    top: 181px;
-  }
-}
-
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 0px) and (max-width: 991px) {
   #top-nav {
     display: none;
   }
+  #weather { display: none; }  /* hide it on small screens */
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -198,7 +210,7 @@ a {
 
 #hamburger {
   color: #567682;
-  text-shadow: 1px 1px 3px #a7e4fb;
+  text-shadow: 3px 3px 3px #a7e4fb;
   font-size: 40px;
   cursor: pointer;
   padding: 10px;
@@ -259,6 +271,7 @@ a {
   background-color: #e3e7d6;
   position: absolute;
   bottom: 0px;
+  left: 0px;
 }
 
 .license-text a {
