--- a/css/style.css
+++ b/css/style.css
@@ -130,29 +130,47 @@ button {
   padding: 0px 20px;
   color: #25424d;
 }
+.toggle-button {
+  font-size: 1.1em;
+}
 
 .toggle-button button{
-  padding: 0px 10px;
+  padding: 5px 10px;
   margin: 0 5px;
   background-color: #a7e4fb;
   color: #25424d;
-  font-size: 1em;
   border: 2px solid #567682;
   border-radius: 7px;
+
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+  background-image: -webkit-linear-gradient(top, #ffffff 0%, #e0e0e0 100%);
+  border-color: #ccc;
+
+  background-image: -webkit-linear-gradient(top, #337ab7 0%, #265a88 100%);
+  background-image: -o-linear-gradient(top, #337ab7 0%, #265a88 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#337ab7), to(#265a88));
+  background-image: linear-gradient(to bottom, #337ab7 0%, #265a88 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff337ab7', endColorstr='#ff265a88', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  background-repeat: repeat-x;
+  border-color: #245580;
 }
 
 .toggle-button button:hover {
-  box-shadow: 0 12px 16px 0 rgba(167,228,251,0.24), 0 17px 50px 0 rgba(167,228,251,0.19);
+  box-shadow: 0 4px 4px 0 rgba(167,228,251,0.24), 0 8px 12px 0 rgba(167,228,251,0.19);
+  background-color: #265a88;
+  background-position: 0 -15px;
 }
 
 .toggle-button .active  {
-  background-color: #a7e4fb;
-  color: #25424d;
+  background-color: #25424d;
+  color: #a7e4fb;
 }
 
 .toggle-button .not-active  {
-  background-color: #25424d;
-  color: #a7e4fb;
+  background-color: #a7e4fb;
+  color: #25424d;
 }
 
 button:focus {outline:0;}
